--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://coding.renyuzhuo.cn
+url: http://blog.renyuzhuo.cn
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -25,7 +25,7 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render:
+skip_render: README.md
 
 # Writing
 new_post_name: :title.md # File name of new posts
@@ -78,3 +78,6 @@ deploy:
   repo:
     github: git@github.com:renyuzhuo/renyuzhuo.github.io.git,master
     coding: git@git.coding.net:ryz/ryz.git,master
+
+sitemap:
+  path: sitemap.xml
